# ros2_multi_agent_passage

./: .gitignore  .gitmodules  README.md
launch/: centralized_rvo_passage_robomaster.launch.yaml  freyja_fpvquad.launch.yaml  freyja_robomaster.launch.yaml  multi_robomaster_rvo.launch.py  multi_robomaster_rvo.launch.yaml  rvo_robomaster.launch.yaml  simulation_fpvquads.launch.py  simulation_robomasters.launch.py
src/MerryXMas/: CMakeLists.txt  package.xml  traj_merry.csv  traj_xmas.csv  trajectory.csv
src/MerryXMas/src/: merry.cpp
src/control_baselines/: CMakeLists.txt  package.xml
src/control_baselines/src/: rvo.cpp
src/control_baselines_msgs/: CMakeLists.txt  package.xml
src/control_baselines_msgs/action/: PoseControl.action
src/evaluation_infrastructure/: package.xml  setup.cfg  setup.py
src/evaluation_infrastructure/evaluation_infrastructure/: agent.py  agent_centralized_robomaster_rvo_passage.py  agent_start_goal.py  agent_util.py  mode_server.py  pose_state_server.py  qos_profiles.py
src/evaluation_msgs/: CMakeLists.txt  package.xml
src/evaluation_msgs/srv/: InitialPoseStartGoal.srv  ModeServer.srv
src/passage_gnn_simple/: package.xml  setup.cfg  setup.py
src/passage_gnn_simple/config/: passage_8e2d2_5_agents.yaml
src/passage_gnn_simple/launch/: centralized_passage_robomaster.launch.yaml  decentralized_passage_robomaster.launch.py
src/passage_gnn_simple/models/: 8e2d2_4899.pt
src/passage_gnn_simple/passage_gnn_simple/: centralized_passage.py  decentralized_passage.py  passage.py
src/passage_gnn_simple_cpp/: CMakeLists.txt  package.xml
src/passage_gnn_simple_cpp/passage_gnn_simple_cpp/: __init__.py
src/passage_gnn_simple_msgs/: CMakeLists.txt  package.xml
src/passage_gnn_simple_msgs/msg/: CommMessage.msg
src/rvo/: CMakeLists.txt  package.xml
src/rvo/src/: agent.hpp  decentralized_rvo.cpp  rvo.cpp
src/rvo_msgs/: CMakeLists.txt  package.xml
src/rvo_msgs/msg/: DecentralizedRVOComm.msg
util/: process.py  trajectory_drawer.py
