<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jb2270@cam.ac.uk">jan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>freyja_msgs</depend>
  <depend>evaluation_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>visualization_msgs</depend>
  <depend>rvo_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
